# smartapp

./: .docker_ignore  .dockerignore  .gitignore  README.md  bronnen.md  build.sh  docker-compose.template.yml  docker-compose.yml  dump.rdb  git.ps1  pid.md  setup.sh  timesheet.md
backend/: Auth.dockerfile  Bis.dockerfile  Build.dockerfile  Business.dockerfile  Cargo.toml  Run.dockerfile
backend/jwt-gang/: Cargo.toml
backend/jwt-gang/src/: claim.rs  claim_config.rs  claim_error.rs  jwt_numeric_date.rs  lib.rs
backend/mailgang/: Cargo.toml
backend/mailgang/src/: lib.rs  mail_struct.rs  mailer_gang.rs
backend/xam-xam-bis-bll/: Cargo.toml
backend/xam-xam-bis-bll/src/: date_ser.rs  err.rs  lib.rs
backend/xam-xam-bis-bll/src/service/: product.rs  storage.rs
backend/xam-xam-bis-bll/src/viewmodels/: edit_storage.rs  id_product.rs  insert_product.rs  mod.rs  move_product.rs  new_storage.rs  product_id.rs  products.rs  storage_name.rs  storage_names.rs  storages.rs  update_product.rs
backend/xam-xam-bis-web/: Cargo.toml  Jwt.toml  environment.txt
backend/xam-xam-bis-web/src/: db.rs  err.rs  main.rs  user_id.rs  web_config.rs
backend/xam-xam-bis-web/src/controllers/: mod.rs  product.rs  storage.rs
backend/xam-xam-common/: Cargo.toml
backend/xam-xam-common/src/: util.rs
backend/xam-xam-dal/: Cargo.toml
backend/xam-xam-dal/migrations/2020-10-09-202858_xam-xam-begin/: up.sql
backend/xam-xam-dal/src/: basic_user_info.rs  err.rs  lib.rs  product_description.rs  schema.rs
backend/xam-xam-dal/src/enums/: product_kind.rs  storage_kind.rs
backend/xam-xam-dal/src/models/: basic_user_info.rs  mod.rs  product.rs  product_description.rs  product_id.rs  storage.rs  user.rs
backend/xam-xam-dal/src/repo/: mod.rs  product.rs  storage.rs  user.rs
backend/xam-xam-id-bll/: Cargo.toml
backend/xam-xam-id-bll/src/: auth_service.rs  err.rs  lib.rs
backend/xam-xam-id-bll/src/viewmodels/: basic_info.rs  change_email.rs  email.rs  email_pwd.rs  forgot_pwd.rs  mod.rs  new_email.rs  new_user.rs  password.rs  product_unit.rs
backend/xam-xam-id-web/: Cargo.toml  environment.txt
backend/xam-xam-id-web/src/: db.rs  err.rs  main.rs  web_config.rs
backend/xam-xam-id-web/src/controllers/: auth.rs  user.rs
backend/xam-xam-id-web/src/extractors/: credentials.rs  user_id.rs
code/: nginx.conf  redis.conf
code/jwt-gang/: Cargo.toml  Jwt.toml
code/jwt-gang/src/: claim.rs  claim_config.rs  claim_error.rs  claim_trait.rs  jwt_numeric_date.rs  lib.rs
code/mailgang/: Cargo.toml  README.md
code/mailgang/src/: lib.rs  mail_struct.rs  mailer_gang.rs  util.rs
code/xam-xam-bis-bll/: Cargo.toml
code/xam-xam-bis-bll/src/: err.rs  lib.rs
code/xam-xam-bis-bll/src/service/: product.rs  storage.rs
code/xam-xam-bis-bll/src/viewmodels/: edit_storage.rs  id_product.rs  mod.rs  new_storage.rs  products.rs  storage_name.rs  storages.rs  update_product.rs
code/xam-xam-bis-web/: Cargo.toml
code/xam-xam-bis-web/src/: db.rs  err.rs  main.rs  web_config.rs
code/xam-xam-bis-web/src/controllers/: mod.rs  product.rs  storage.rs
code/xam-xam-common/: Cargo.toml
code/xam-xam-common/src/: err_trait.rs  lib.rs  util.rs
code/xam-xam-dal/: Cargo.toml  diesel.toml
code/xam-xam-dal/migrations/00000000000000_diesel_initial_setup/: down.sql
code/xam-xam-dal/migrations/2020-10-09-094350_xam-xam-begin/: down.sql  up.sql
code/xam-xam-dal/migrations/2020-10-09-202858_xam-xam-begin/: down.sql  up.sql
code/xam-xam-dal/migrations/2020-10-10-153700_xam-xam-unique/: down.sql  up.sql
code/xam-xam-dal/src/: basic_user_info.rs  const_values.rs  err.rs  lib.rs  schema.rs
code/xam-xam-dal/src/enums/: mod.rs  product_kind.rs  storage_kind.rs
code/xam-xam-dal/src/models/: mod.rs  product.rs  storage.rs  user.rs
code/xam-xam-dal/src/repo/: product.rs  storage.rs  user.rs
code/xam-xam-id-bll/: Cargo.toml
code/xam-xam-id-bll/src/: auth_service.rs  config.rs  err.rs  lib.rs
code/xam-xam-id-bll/src/viewmodels/: basic_info.rs  email.rs  emails.rs  mod.rs  new_email.rs  new_user.rs  password.rs  pwd_token.rs  token.rs
code/xam-xam-id-web/: Cargo.toml  Jwt.toml
code/xam-xam-id-web/src/: controller.rs  db.rs  err.rs  main.rs  web_config.rs
code/xam-xam-id-web/src/controllers/: auth.rs  mod.rs  request.rs  user.rs
code/xam-xam-id-web/src/extractor/: user_id.rs
code/xam-xam-id-web/src/extractors/: credentials.rs  mod.rs  user_id.rs
code/xam-xam-react/: package-lock.json  package.json
code/xam-xam-react/public/: index.html  manifest.json  modal.css  worker.js
code/xam-xam-react/public/css/: index.css
code/xam-xam-react/src/: api.js  email.js  index.js  state.js
code/xam-xam-react/src/components/: input.js  login.js  normal_home.js  registration.js  user.js  user_context.js
code/xam-xam-react/src/components/dialogs/: InputStorage.js
code/xam-xam-react/src/components/product/: product.js
code/xam-xam-react/src/components/storage/: delete_storage.js  edit_storage.js  input_storage.js  storage.js  storages.js
code/xam-xam-react/src/components/user/: change_email.js  change_pwd.js  delete_profile.js  forgotten_pwd.js  login.js  registration.js  user.js  user_info.js  user_info_popup.js
documentatie/: README.md  bronnen.md  build_doc.sh  git.bash  git.ps1  pid.md  timesheet.md
frontend/: React.dockerfile  nginx.conf
frontend/xam-xam-react/: package-lock.json  package.json
frontend/xam-xam-react/public/: index.html  manifest.json  worker.js
frontend/xam-xam-react/public/css/: index.css
frontend/xam-xam-react/src/: api.js  email.js  enums.js  footer.js  icon.js  index.js  state.js  toast.js
frontend/xam-xam-react/src/components/: home.js  input.js  normal_home.js  user_context.js
frontend/xam-xam-react/src/components/product/: delete_product.js  edit_product.js  input_product.js  product.js  products.js
frontend/xam-xam-react/src/components/storage/: delete_storage.js  edit_storage.js  input_storage.js  storage.js  storages.js
frontend/xam-xam-react/src/components/user/: auth_home.js  change_email.js  (+9 more)
frontend/xam-xam-react/src/css/: index.css  modal.css
