[package]
name = "mailgang"
version = "0.1.3"
authors = ["Michael Hertsens <michael28072000@outlook.com>"]
description = "Crate that I use to abstract away the smtp(email-related stuff)."
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
xam-xam-common = { path = "../xam-xam-common" }

log = "0.4.14"
lettre = "0.9.5"
lettre_email = "0.9.4"