[package]
name = "xam-xam-common"
version = "0.1.0"
authors = ["Michael Hertsens <michael28072000@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4.3"
rand = "0.8.3"
lazy_static = "1.4.0"
dotenv = "0.15.0"