[package]
name = "xam-xam-dal"
version = "0.1.0"
authors = ["Michael Hertsens <michael28072000@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["postgres","chrono","r2d2"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4.0"
chrono = {version="0.4", default-features = false}
diesel-derive-enum = { version = "1", default-features = false, features = ["postgres"] }
bcrypt = "0.8.2"
xam-xam-common={ path="../xam-xam-common" }
r2d2 = "0.8.9"