[package]
name = "xam-xam-dal"
version = "0.1.0"
authors = ["Michael Hertsens <michael28072000@outlook.com>"]
edition = "2018"

[dependencies]
xam-xam-common={ path="../xam-xam-common" }

diesel = { version = "1.4.5", features = ["postgres","chrono","r2d2"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4.14"
chrono = {version="0.4.19", default-features = false}
diesel-derive-enum = { version = "1.1", default-features = false, features = ["postgres"] }
bcrypt = "0.9"
r2d2 = "0.8.9"