[package]
name = "xam-xam-id-web"
version = "0.1.0"
authors = ["Michael Hertsens <michael28072000@outlook.com>"]
edition = "2018"

[dependencies]
xam-xam-id-bll = {path = "../xam-xam-id-bll"}
xam-xam-common = {path = "../xam-xam-common"}
jwt-gang = {path = "../jwt-gang"}
mailgang = { path = "../mailgang" }

actix-web = { version = "3", features = ["rustls"] }
actix-cors = "0.5.4"
actix-identity = "0.3.1"
actix-web-httpauth = "0.5.1"
rustls = "0.18.1"
log = "0.4.14"
futures-util = "0.3.13"
env_logger="0.8.3"
lazy_static = "1.4.0"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = "z"