[package]
name = "jwt-gang"
version = "0.1.0"
authors = ["mich2000 <michael28072000@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
toml = "0.5.6"
serde = { version = "1.0", features = ["derive"] }
jsonwebtoken = "5.0.1"
chrono = "0.4"
log = "0.4.0"