[package]
name = "jwt-gang"
version = "0.1.0"
authors = ["mich2000 <michael28072000@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
chrono = {version="0.4", default-features = false}
jsonwebtoken = "7"
log = "0.4.0"
toml = {version="0.5", default-features = false}