[package]
name = "xam-xam-bis-web"
version = "0.1.0"
authors = ["Michael Hertsens <michael28072000@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xam-xam-bis-bll={path="../xam-xam-bis-bll"}
xam-xam-common={path="../xam-xam-common"}
jwt-gang={path="../jwt-gang"}
actix-web = { version = "3", features = ["rustls"] }
actix-cors = "0.5.0"
actix-identity = "0.3.1"
rustls = "0.18.1"
log="0.4.0"
dotenv="0.15.0"
log4rs = "0.13.0"
futures-util = "0.3.7"