[package]
name = "xam-xam-dal"
version = "0.1.0"
authors = ["Michael Hertsens <michael28072000@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["postgres","chrono"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
diesel-derive-enum = { version = "1", features = ["postgres"] }
log = "0.4.0"
rand = "0.7.3"
rust-argon2 = "0.8"
regex = "1"
lazy_static = "1.4.0"