[package]
name = "xam-xam-dal"
version = "0.1.0"
authors = ["Michael Hertsens <michael28072000@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["postgres","chrono"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4.0"
chrono = "0.4"
dotenv ="0.15.0"
diesel-derive-enum = { version = "1", features = ["postgres"] }
rust-argon2 = "0.8"
xam-xam-common={ path="../xam-xam-common" }