[package]
name = "xam-xam-id-bll"
version = "0.1.0"
authors = ["Michael Hertsens <michael28072000@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
log = "0.4.0"
mailgang = "0.2.0"
jwt-gang = { path = "../jwt-gang"}
xam-xam-dal = { path = "../xam-xam-dal" }
redis = { version = "0.17.0" }
toml = "0.5"
xam-xam-common={ path="../xam-xam-common" }