[package]
name = "xam-xam-id-web"
version = "0.1.0"
authors = ["Michael Hertsens <michael28072000@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xam-xam-id-bll={path="../xam-xam-id-bll"}
xam-xam-common={path="../xam-xam-common"}
jwt-gang={path="../jwt-gang"}
mailgang={ path="../mailgang" }
actix-web = "3"
serde = { version = "1.0", features = ["derive"] }
log="0.4.0"
dotenv="0.15.0"
log4rs = "0.13.0"